--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.3.4
 certifi==2020.12.5
 chardet==4.0.0
 distlib==0.3.1
+dj-static==0.0.6
 Django==3.2
 filelock==3.0.12
 gunicorn==20.1.0
@@ -11,5 +12,6 @@ pypugjs==5.9.9
 pytz==2021.1
 six==1.15.0
 sqlparse==0.4.1
+static3==0.7.0
 virtualenv==20.4.3
 virtualenv-clone==0.5.4
