--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
       ],
       "liveSassCompile.settings.includeItems": [
         "./"
-      ]
+      ],
+      "compile-hero.disable-compile-files-on-did-save-code": false
 }
