--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,17 @@ chardet==4.0.0
 distlib==0.3.1
 dj-static==0.0.6
 Django==3.2
+django-appconf==1.0.4
+django-compressor==2.4
+django-sass-processor==1.0.0
 filelock==3.0.12
 gunicorn==20.1.0
+libsass==0.20.1
 pipenv==2020.11.15
 pypugjs==5.9.9
 pytz==2021.1
+rcssmin==1.0.6
+rjsmin==1.1.0
 six==1.15.0
 sqlparse==0.4.1
 static3==0.7.0
