--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,143 @@
+absl-py==0.11.0
 appdirs==1.4.4
+apturl==0.5.2
 asgiref==3.3.4
-certifi==2020.12.5
-chardet==4.0.0
+astor==0.8.1
+astunparse==1.6.3
+attrs==20.3.0
+bcrypt==3.1.7
+beautifulsoup4==4.8.2
+bleach==1.5.0
+blinker==1.4
+Brlapi==0.7.0
+cachetools==4.2.1
+certifi==2019.11.28
+chardet==3.0.4
+chrome-gnome-shell==0.0.0
+cliapp==1.20180812.1
+Click==7.0
+cmdtest==0.32+git
+colorama==0.4.3
+command-not-found==0.3
+crcmod==1.7
+cryptography==2.8
+cupshelpers==1.0
+dbus-python==1.2.16
+defer==1.0.6
 distlib==0.3.1
-dj-static==0.0.6
+distro==1.4.0
+distro-info===0.23ubuntu1
 Django==3.2
-django-appconf==1.0.4
-django-compressor==2.4
-django-sass-processor==1.0.0
+duplicity==0.8.12.0
+entrypoints==0.3
+fasteners==0.14.1
 filelock==3.0.12
+flatbuffers==1.12
+future==0.18.2
+fuzzysearch==0.7.3
+gast==0.4.0
+google-api-python-client==1.7.11
+google-auth==1.24.0
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.4.2
+google-pasta==0.2.0
+greenlet==0.4.15
+grpcio==1.34.1
 gunicorn==20.1.0
-libsass==0.20.1
-pipenv==2020.11.15
-pypugjs==5.9.9
-pytz==2021.1
-rcssmin==1.0.6
-rjsmin==1.1.0
+h5py==3.1.0
+html5lib==0.9999999
+httplib2==0.14.0
+idna==2.8
+Keras==2.2.4
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+keyring==18.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lockfile==0.12.2
+louis==3.12.0
+lxml==4.5.0
+macaroonbakery==1.3.1
+Mako==1.1.0
+Markdown==3.3.3
+MarkupSafe==1.1.0
+monotonic==1.5
+msgpack==0.6.2
+netifaces==0.10.4
+numpy==1.19.5
+oauth2client==4.1.2
+oauthlib==3.1.0
+olefile==0.46
+onnx==1.8.1
+opencv-python==4.5.1.48
+opt-einsum==3.3.0
+packaging==20.3
+paramiko==2.6.0
+pexpect==4.6.0
+Pillow==7.0.0
+protobuf==3.14.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycairo==1.16.2
+pycups==1.9.73
+PyDrive==1.3.1
+Pygments==2.3.1
+PyGObject==3.36.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pynvim==0.4.1
+pyOpenSSL==19.0.0
+pyparsing==2.4.6
+PyPrind==2.11.2
+PyQt5==5.14.1
+pyRFC3339==1.1
+pyserial==3.5
+python-apt==2.0.0+ubuntu0.20.4.4
+python-dateutil==2.7.3
+python-debian===0.1.36ubuntu1
+pytz==2019.3
+pyxdg==0.26
+PyYAML==5.3.1
+reportlab==3.5.34
+requests==2.22.0
+requests-oauthlib==1.3.0
+requests-unixsocket==0.2.0
+rsa==4.7
+scipy==1.4.1
+screen-resolution-extra==0.0.0
+SecretStorage==2.3.1
+simplejson==3.16.0
+sip==4.19.21
 six==1.15.0
+soupsieve==1.9.5
+SQLAlchemy==1.3.12
 sqlparse==0.4.1
-static3==0.7.0
+systemd-python==234
+tb-nightly==2.5.0a20210130
+tensorboard==1.6.0
+tensorboard-plugin-wit==1.8.0
+tensorflow @ https://storage.googleapis.com/tensorflow/mac/cpu/tensorflow-1.6.0-py3-none-any.whl
+tensorflow-estimator==2.4.0
+termcolor==1.1.0
+tf-estimator-nightly==2.5.0.dev2021020201
+tf-nightly==2.5.0.dev20210130
+ttystatus==0.38
+typing-extensions==3.7.4.3
+ubuntu-advantage-tools==20.3
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+uritemplate==0.6
+urllib3==1.25.8
+usb-creator==0.3.7
 virtualenv==20.4.3
-virtualenv-clone==0.5.4
+wadllib==1.3.3
+webencodings==0.5.1
+Werkzeug==1.0.1
 whitenoise==5.2.0
+wrapt==1.12.1
+xkit==0.0.0
+xmodem==0.4.6
