--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,16 @@ asgiref==3.3.4
 certifi==2020.12.5
 chardet==4.0.0
 distlib==0.3.1
+dj-database-url==0.5.0
 dj-static==0.0.6
 Django==3.2
 django-appconf==1.0.4
 django-compressor==2.4
+django-datetime-widget2==0.9.5
 django-notification-system==1.5.2
 django-sass-processor==1.0.0
+django-taggit==1.4.0
+django-tagulous==1.1.0
 exponent-server-sdk==2.0.0
 filelock==3.0.12
 gunicorn==20.1.0
@@ -17,6 +21,7 @@ idna==2.10
 libsass==0.20.1
 Pillow==8.2.0
 pipenv==2020.11.15
+psycopg2-binary==2.8.6
 PyJWT==1.7.1
 pypugjs==5.9.9
 python-dateutil==2.8.1
