--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,13 @@ appdirs==1.4.4
 asgiref==3.3.4
 certifi==2020.12.5
 chardet==4.0.0
+cloudinary==1.25.0
 distlib==0.3.1
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==3.2
 django-appconf==1.0.4
+django-cloudinary-storage==0.3.0
 django-compressor==2.4
 django-datetime-widget2==0.9.5
 django-notification-system==1.5.2
